--- a/.config/vscode/settings.json
+++ b/.config/vscode/settings.json
@@ -1,11 +1,11 @@
 {
     "workbench.editor.wrapTabs": true,
-    "terminal.integrated.fontFamily": "'JetBrainsMono Nerd Font', Consolas, 'Courier New', monospace",
+    "terminal.integrated.fontFamily": "'UbuntuMono Nerd Font'",
     "terminal.integrated.fontSize": 12,
     "terminal.integrated.persistentSessionReviveProcess": "never",
     "terminal.external.windowsExec": "pwsh",
     "telemetry.telemetryLevel": "off",
-    "editor.fontFamily": "'JetBrainsMono Nerd Font', Consolas, 'Courier New', monospace",
+    "editor.fontFamily": "'UbuntuMono Nerd Font'",
     "editor.fontLigatures": true,
     "editor.minimap.enabled": false,
     "editor.formatOnSaveMode": "file",
@@ -17,7 +17,7 @@
     "editor.suggest.showStatusBar": true,
     "editor.suggest.insertMode": "insert",
     "git.autofetch": true,
-    "workbench.colorTheme": "One Dark Pro Mix",
+    "workbench.colorTheme": "Gruvbox Dark Hard",
     "workbench.iconTheme": "material-icon-theme",
     "python.languageServer": "Pylance",
     "python.analysis.typeCheckingMode": "basic",
