--- a/.config-linux/.tmux.conf
+++ b/.config-linux/.tmux.conf
@@ -26,7 +26,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # reload configuration
-bind-key r source-file ~/.tmux.conf
+bind-key -r r source-file ~/.tmux.conf
 
 # term colors, these are the correct ones according to neovim checkhealth
 # set-option -ga terminal-overrides ",xterm-256color:Tc"
