--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -15,6 +15,9 @@ size = 15
 [shell]
 program = "pwsh"
 
+[selection]
+save_to_clipboard = true
+
 # gruvbox_material_hard_dark
 [colors.primary]
 background = '0x1d2021'
