--- a/.config/vscode/settings.json
+++ b/.config/vscode/settings.json
@@ -1,73 +1,69 @@
 {
-    "workbench.editor.wrapTabs": true,
-    "terminal.integrated.fontFamily": "'UbuntuMono Nerd Font'",
-    "terminal.integrated.fontSize": 12,
-    "terminal.integrated.persistentSessionReviveProcess": "never",
-    "terminal.external.windowsExec": "pwsh",
-    "telemetry.telemetryLevel": "off",
-    "editor.fontFamily": "'UbuntuMono Nerd Font'",
-    "editor.fontLigatures": true,
-    "editor.minimap.enabled": false,
-    "editor.formatOnSaveMode": "file",
-    "editor.formatOnSave": true,
-    "editor.renderWhitespace": "all",
-    "editor.codeActionsOnSave": {
-        "source.organizeImports": "explicit"
-    },
-    "editor.suggest.showStatusBar": true,
-    "editor.suggest.insertMode": "insert",
-    "git.autofetch": true,
-    "workbench.colorTheme": "Gruvbox Dark Hard",
-    "workbench.iconTheme": "material-icon-theme",
-    "python.languageServer": "Pylance",
-    "python.analysis.typeCheckingMode": "basic",
-    "python.analysis.inlayHints.functionReturnTypes": true,
-    "python.analysis.inlayHints.variableTypes": false,
-    "security.workspace.trust.untrustedFiles": "open",
-    "indentRainbow.excludedLanguages": [
-        "terraform"
-    ],
-    "terraform.codelens.referenceCount": true,
-    "bicep.enableSurveys": false,
-    "gitlens.plusFeatures.enabled": false,
-    "window.zoomLevel": 1,
-    "workbench.sideBar.location": "right",
-    "dev.containers.dockerPath": "podman",
-    "dev.containers.mountWaylandSocket": false,
-    "powershell.integratedConsole.showOnStartup": false,
-    "workbench.tree.enableStickyScroll": true,
-    "workbench.activityBar.location": "hidden",
-    "terminal.integrated.stickyScroll.enabled": true,
-    "multiDiffEditor.experimental.enabled": true,
-    "cSpell.enableFiletypes": [
-        "powershell"
-    ],
-    "window.commandCenter": false,
-    "workbench.layoutControl.enabled": false,
-    "window.density.editorTabHeight": "compact",
-    "window.menuBarVisibility": "toggle",
-    "diffEditor.ignoreTrimWhitespace": true,
-    "vim.easymotion": true,
-    "vim.incsearch": true,
-    "vim.useSystemClipboard": true,
-    "vim.useCtrlKeys": false,
-    "vim.hlsearch": true,
-    "cSpell.allowCompoundWords": true,
-    "cSpell.userWords": [
-        "appgw",
-        "argocd",
-        "autoscale",
-        "azcore",
-        "aztables",
-        "hclparse",
-        "Ipam",
-        "LASTEXITCODE",
-        "mmdc",
-        "powerline",
-        "tflog",
-        "tfswitch",
-        "Trivy",
-        "velero",
-        "vnet"
-    ]
+  "workbench.editor.wrapTabs": true,
+  "terminal.integrated.fontFamily": "'UbuntuMono Nerd Font'",
+  "terminal.integrated.fontSize": 12,
+  "terminal.integrated.persistentSessionReviveProcess": "never",
+  "terminal.external.windowsExec": "pwsh",
+  "telemetry.telemetryLevel": "off",
+  "editor.fontFamily": "'UbuntuMono Nerd Font'",
+  "editor.fontLigatures": true,
+  "editor.minimap.enabled": false,
+  "editor.formatOnSaveMode": "file",
+  "editor.formatOnSave": true,
+  "editor.renderWhitespace": "all",
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": "explicit"
+  },
+  "editor.suggest.showStatusBar": true,
+  "editor.suggest.insertMode": "insert",
+  "git.autofetch": true,
+  "workbench.colorTheme": "Gruvbox Dark Hard",
+  "workbench.iconTheme": "material-icon-theme",
+  "python.languageServer": "Pylance",
+  "python.analysis.typeCheckingMode": "basic",
+  "python.analysis.inlayHints.functionReturnTypes": true,
+  "python.analysis.inlayHints.variableTypes": false,
+  "security.workspace.trust.untrustedFiles": "open",
+  "indentRainbow.excludedLanguages": ["terraform"],
+  "terraform.codelens.referenceCount": true,
+  "bicep.enableSurveys": false,
+  "gitlens.plusFeatures.enabled": false,
+  "window.zoomLevel": 1,
+  "workbench.sideBar.location": "right",
+  "dev.containers.dockerPath": "podman",
+  "dev.containers.mountWaylandSocket": false,
+  "powershell.integratedConsole.showOnStartup": false,
+  "workbench.tree.enableStickyScroll": true,
+  "workbench.activityBar.location": "hidden",
+  "terminal.integrated.stickyScroll.enabled": true,
+  "multiDiffEditor.experimental.enabled": true,
+  "cSpell.enableFiletypes": ["powershell"],
+  "window.commandCenter": false,
+  "workbench.layoutControl.enabled": false,
+  "window.density.editorTabHeight": "compact",
+  "window.menuBarVisibility": "toggle",
+  "diffEditor.ignoreTrimWhitespace": true,
+  "vim.easymotion": true,
+  "vim.incsearch": true,
+  "vim.useSystemClipboard": true,
+  "vim.useCtrlKeys": false,
+  "vim.hlsearch": true,
+  "cSpell.allowCompoundWords": true,
+  "cSpell.userWords": [
+    "appgw",
+    "argocd",
+    "autoscale",
+    "azcore",
+    "aztables",
+    "hclparse",
+    "Ipam",
+    "LASTEXITCODE",
+    "mmdc",
+    "powerline",
+    "tflog",
+    "tfswitch",
+    "Trivy",
+    "velero",
+    "vnet"
+  ]
 }
