ignore floating dialogs

--- a/glazwm/config.yaml
+++ b/glazwm/config.yaml
@@ -147,6 +147,9 @@ window_rules:
   - command: "set floating"
     match_class_name: "#32770"
 
+  - command: "ignore"
+    match_class_name: "#32770"
+
   # Do not manage picture-in-picture windows for browsers. Note that the default is for
   # English; change `match_title` to the window's title if you use another language.
   - command: "ignore"
