--- a/.config/terminal/settings.json
+++ b/.config/terminal/settings.json
@@ -29,7 +29,7 @@
     "copyFormatting": "none",
     "copyOnSelect": false,
     "defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
-    "launchMode": "focus",
+    // "launchMode": "focus",
     "newTabMenu": [
         {
             "type": "remainingProfiles"
@@ -51,7 +51,7 @@
             "scrollbarState": "hidden",
             "suppressApplicationTitle": false,
             "useAcrylic": false,
-            "opacity": 90
+            "opacity": 95
         },
         "list": [
             {
