update starship for python

--- a/home/dot_config/starship.toml
+++ b/home/dot_config/starship.toml
@@ -58,7 +58,8 @@ format = '[[ $symbol( $version) ](fg:color_fg0)]($style)'
 
 [python]
 symbol = ""
-format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
+format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)[[( ${virtualenv} )](fg:color_blue)]($style)'
+style = "yellow bold"
 
 [terraform]
 symbol = "󱁢"
