vscode settings and keybindings update

--- a/home/AppData/Roaming/Code/User/settings.json
+++ b/home/AppData/Roaming/Code/User/settings.json
@@ -1,75 +1,60 @@
 {
+  // WINDOW & WORKBENCH
+  "window.title": "${activeEditorMedium}${separator}${rootName} ${dirty}",
+  "window.zoomLevel": 1.0,
+  "window.commandCenter": false,
+  "window.density.editorTabHeight": "compact",
+  "window.menuBarVisibility": "toggle",
   "workbench.editor.wrapTabs": true,
-  "terminal.integrated.fontFamily": "'UbuntuMono Nerd Font'",
-  "terminal.integrated.fontSize": 12,
-  "terminal.integrated.persistentSessionReviveProcess": "never",
-  "terminal.external.windowsExec": "pwsh",
-  "telemetry.telemetryLevel": "off",
+  "workbench.statusBar.visible": true,
+  "workbench.sideBar.location": "right",
+  "workbench.tree.enableStickyScroll": true,
+  "workbench.panel.showLabels": false,
+  "workbench.activityBar.location": "bottom",
+  "workbench.layoutControl.enabled": false,
+  "workbench.iconTheme": "material-icon-theme",
+  "workbench.colorTheme": "Gruvbox Dark Hard",
+  // EDITOR
   "editor.fontFamily": "'UbuntuMono Nerd Font'",
+  "editor.fontSize": 16,
   "editor.fontLigatures": true,
   "editor.minimap.enabled": false,
   "editor.formatOnSaveMode": "file",
   "editor.formatOnSave": true,
   "editor.renderWhitespace": "all",
+  "editor.suggest.showStatusBar": true,
+  "editor.suggest.insertMode": "replace",
+  "editor.linkedEditing": true,
+  "editor.mouseWheelZoom": true,
   "editor.codeActionsOnSave": {
     "source.organizeImports": "explicit"
   },
-  "editor.suggest.showStatusBar": true,
-  "editor.suggest.insertMode": "insert",
-  "workbench.iconTheme": "material-icon-theme",
+  "editor.bracketPairColorization.enabled": true,
+  "editor.guides.bracketPairs": true,
+  "editor.cursorSmoothCaretAnimation": "on",
+  "editor.cursorBlinking": "phase",
+  "editor.smoothScrolling": true,
+  "editor.stickyScroll.enabled": true,
+  "files.insertFinalNewline": true,
+  // TERMINAL
+  "terminal.integrated.mouseWheelZoom": true,
+  "terminal.integrated.fontFamily": "'UbuntuMono Nerd Font'",
+  "terminal.integrated.fontSize": 15,
+  "terminal.integrated.persistentSessionReviveProcess": "never",
+  "terminal.integrated.stickyScroll.enabled": true,
+  "terminal.external.windowsExec": "pwsh",
+  "terminal.integrated.cursorBlinking": true,
+  "terminal.integrated.cursorStyle": "line",
+  "terminal.integrated.persistentSessionScrollback": 10000,
+  // LANGUAGE SPECIFIC
   "python.languageServer": "Pylance",
   "python.analysis.typeCheckingMode": "basic",
   "python.analysis.inlayHints.functionReturnTypes": true,
   "python.analysis.inlayHints.variableTypes": false,
-  "security.workspace.trust.untrustedFiles": "open",
-  "indentRainbow.excludedLanguages": [
-    "terraform"
-  ],
-  "terraform.codelens.referenceCount": true,
-  "bicep.enableSurveys": false,
-  "gitlens.plusFeatures.enabled": false,
-  "window.zoomLevel": 1,
-  "workbench.sideBar.location": "right",
-  "dev.containers.dockerPath": "podman",
-  "dev.containers.mountWaylandSocket": false,
-  "powershell.integratedConsole.showOnStartup": false,
-  "workbench.tree.enableStickyScroll": true,
-  "workbench.activityBar.location": "hidden",
-  "terminal.integrated.stickyScroll.enabled": true,
-  "multiDiffEditor.experimental.enabled": true,
-  "cSpell.enableFiletypes": [
-    "powershell"
-  ],
-  "window.commandCenter": false,
-  "workbench.layoutControl.enabled": false,
-  "window.density.editorTabHeight": "compact",
-  "window.menuBarVisibility": "toggle",
-  "diffEditor.ignoreTrimWhitespace": true,
-  "vim.easymotion": true,
-  "vim.incsearch": true,
-  "vim.useSystemClipboard": true,
-  "vim.useCtrlKeys": false,
-  "vim.hlsearch": true,
-  "cSpell.allowCompoundWords": true,
-  "cSpell.userWords": [
-    "appgw",
-    "argocd",
-    "autoscale",
-    "azcore",
-    "aztables",
-    "hclparse",
-    "Ipam",
-    "LASTEXITCODE",
-    "mmdc",
-    "powerline",
-    "tflog",
-    "tfswitch",
-    "Trivy",
-    "velero",
-    "vnet",
-    "glassit"
-  ],
-  "glassit.alpha": 230,
+  "python.formatting.provider": "black",
+  "python.linting.enabled": true,
+  "python.linting.pylintEnabled": true,
+  "python.testing.pytestEnabled": true,
   "[terraform]": {
     "editor.defaultFormatter": "hashicorp.terraform",
     "editor.formatOnSave": false,
@@ -77,9 +62,72 @@
       "source.formatAll.terraform": "explicit"
     }
   },
-  "workbench.colorTheme": "Gruvbox Dark Hard",
-  "files.trimTrailingWhitespace": true,
+  "[markdown]": {
+    "editor.wordWrap": "on",
+    "editor.quickSuggestions": {
+      "comments": "off",
+      "strings": "off",
+      "other": "off"
+    }
+  },
+  "go.toolsManagement.autoUpdate": true,
+  // EXTENSIONS & TOOLS
+  "terraform.codelens.referenceCount": true,
+  "bicep.enableSurveys": false,
+  "gitlens.plusFeatures.enabled": false,
+  "multiDiffEditor.experimental.enabled": true,
+  "diffEditor.ignoreTrimWhitespace": true,
+  "dev.containers.executeInWSL": true,
+  "indentRainbow.excludedLanguages": [
+    "terraform"
+  ],
+  // SPELLING
+  "cSpell.enabledFileTypes": {
+    "*": true,
+  },
+  "cSpell.allowCompoundWords": true,
+  "cSpell.userWords": [
+    "appgw",
+    "argocd",
+    "autoscale",
+    "azcore",
+    "azopenai",
+    "aztables",
+    "glassit",
+    "hclparse",
+    "Ipam",
+    "LASTEXITCODE",
+    "mmdc",
+    "powerline",
+    "qdrant",
+    "tflog",
+    "tfswitch",
+    "Trivy",
+    "velero",
+    "vnet"
+  ],
+  // UI & NAVIGATION
   "breadcrumbs.enabled": false,
-  "editor.mouseWheelZoom": true,
-  "terminal.integrated.mouseWheelZoom": true
+  "zenMode.hideLineNumbers": false,
+  // WORKBENCH - produktywność
+  "workbench.startupEditor": "none",
+  "workbench.editor.enablePreview": false,
+  "workbench.editor.highlightModifiedTabs": true,
+  // MISC
+  "telemetry.telemetryLevel": "off",
+  "files.trimTrailingWhitespace": true,
+  "powershell.integratedConsole.showOnStartup": false,
+  // VIM
+  "vim.easymotion": true,
+  "vim.incsearch": true,
+  "vim.useSystemClipboard": true,
+  "vim.useCtrlKeys": true,
+  "vim.hlsearch": true,
+  "vim.smartRelativeLine": true,
+  "vim.leader": "<space>",
+  "vim.handleKeys": {
+    "<C-a>": false,
+    "<C-b>": false,
+    "<C-f>": false
+  },
 }
