update linux scripts

--- a/home/dot_tmux.conf
+++ b/home/dot_tmux.conf
@@ -17,10 +17,6 @@ set -g status-position top
 set -g status-interval 1
 set -g status-left ""
 
-# disable status
-# set -g status off
-# set -g status on
-
 # count the panes from 1
 set -g base-index 1
 setw -g pane-base-index 1
@@ -28,9 +24,6 @@ setw -g pane-base-index 1
 # reload configuration
 bind-key -r r source-file ~/.tmux.conf
 
-# term colors, these are the correct ones according to neovim checkhealth
-# set-option -ga terminal-overrides ",xterm-256color:Tc"
-set-option -sa terminal-features ',xterm:RGB'
-set-option -sg escape-time 10
+# from neovim checkhealth
+set-option -a terminal-features 'tmux-256color:RGB'
 set-option -g focus-events on
-set-option -g default-terminal "screen-256color"
