--- a/home/dot_tmux.conf
+++ b/home/dot_tmux.conf
@@ -24,6 +24,10 @@ setw -g pane-base-index 1
 # reload configuration
 bind-key -r r source-file ~/.tmux.conf
 
+# tmux-sessionizer
+bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
+bind-key -r C run-shell "~/.local/scripts/tmux-sessionizer ~/.local/share/chezmoi"
+
 # from neovim checkhealth
 set-option -a terminal-features 'tmux-256color:RGB'
 set-option -g focus-events on
