--- a/home/dot_config/starship.toml
+++ b/home/dot_config/starship.toml
@@ -3,15 +3,20 @@
 add_newline = false
 
 format = """
+[┌─](bold fg:color_bg3)\
 $directory\
 $git_branch\
 $git_status\
+$fill\
+$azure\
+$terraform\
+$docker_context\
 $golang\
 $nodejs\
 $python\
-$terraform\
-$docker_context\
-$character"""
+$dotnet\
+$line_break\
+[└](bold fg:color_bg3)$character"""
 
 palette = 'gruvbox_dark'
 
@@ -28,54 +33,70 @@ color_red = '#cc241d'
 color_yellow = '#d79921'
 
 [directory]
-style = "fg:color_purple"
-format = "[$path ]($style)"
-truncation_length = 1
-# truncation_symbol = "…/"
+style = "bold fg:color_purple"
+format = "[$path]($style) "
+truncation_length = 3
+truncation_symbol = "…/"
 
 [git_branch]
-symbol = ""
-format = '[[git:\(](fg:color_green)[$branch ](fg:color_yellow)]($style)'
+symbol = " "
+format = '[[$symbol$branch](bold fg:color_yellow)]($style) '
 
 [git_status]
-format = '[[($all_status)](fg:color_yellow)[( $ahead_behind)](fg:color_red)]($style)[\)](fg:color_green)'
+format = '([[$all_status$ahead_behind](fg:color_orange) ]($style))'
+conflicted = "≠"
+ahead = "⇡${count}"
+behind = "⇣${count}"
+diverged = "⇕"
+untracked = "?"
+stashed = "$"
+modified = "~"
+staged = "+"
+renamed = "»"
+deleted = "✘"
 
-[nodejs]
-symbol = ""
-format = '[[ $symbol( $version) ](fg:color_fg0)]($style)'
-
-[c]
-symbol = " "
-format = '[[ $symbol( $version) ](fg:color_fg0)]($style)'
-
-[rust]
-symbol = ""
-format = '[[ $symbol( $version) ](fg:color_fg0)]($style)'
-
-[golang]
-symbol = ""
-format = '[[ $symbol( $version) ](fg:color_fg0)]($style)'
-
-[python]
-symbol = ""
-format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)[[( ${virtualenv} )](fg:color_blue)]($style)'
-style = "yellow bold"
+[azure]
+symbol = "󰠅 "
+style = "fg:color_blue"
+format = "[$symbol$subscription]($style) "
+disabled = false
 
 [terraform]
-symbol = "󱁢"
-# format = "[ $symbol$workspace]($style)"
-format = '[ $symbol $version $workspace]($style) '
+symbol = "󱁢 "
+format = '[$symbol$workspace]($style) '
+style = "fg:color_purple"
 
 [docker_context]
-symbol = ""
-format = '[[ $symbol( $context) ](fg:#83a598 bg:color_bg3)]($style)'
+symbol = " "
+format = '[$symbol$context]($style) '
+style = "fg:color_blue"
+only_with_files = true
+
+[dotnet]
+symbol = "󰪮 "
+format = '[$symbol$version]($style) '
+style = "fg:color_purple"
+
+[golang]
+symbol = " "
+format = '[[$symbol$version](fg:color_fg0)]($style) '
+
+[nodejs]
+symbol = " "
+format = '[[$symbol$version](fg:color_fg0)]($style) '
+
+[python]
+symbol = " "
+format = '[[$symbol$version](fg:color_yellow)]($style)[[(${virtualenv})](fg:color_orange) ]($style)'
+
+[fill]
+symbol = " "
 
 [line_break]
 disabled = false
 
 [character]
-disabled = false
-success_symbol = '[\$](bold fg:color_fg0)'
+success_symbol = '[\$](bold fg:color_green)'
 error_symbol = '[\$](bold fg:color_red)'
 vimcmd_symbol = '[](bold fg:color_green)'
 vimcmd_replace_one_symbol = '[](bold fg:color_purple)'
